# half_precision

./: CMakeLists.txt  LICENSE  README.md  float16.cpp  float16.hpp
include/: float16.hpp
src/: float16.cpp
tests/: CMakeLists.txt  test_float16.cpp
